Restoring owner_id field to event items descriptor. Updated form ui XML.
Corrects error when adding events.
-:: Change in r8368 did not take into account that events are parliamentary items

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -372,6 +372,11 @@
         <field name="short_name" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
+        <field name="owner_id" displayable="view edit add listing" localizable="view edit listing">
+            <show modes="edit" />
+            <hide modes="listing" />
+            <hide modes="view" roles="bungeni.Anonymous" />
+        </field>
         <field name="language" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit" />
             <hide modes="listing" />
