--- a/bungeni_custom/trunk/themes/cd1/css/skin.css
+++ b/bungeni_custom/trunk/themes/cd1/css/skin.css
@@ -105,6 +105,12 @@
 .template-portal #main-body-table {
     background: #fff;
 }
+/*
+ * form_login
+ */
+.template-portal #login-form .formControls input {
+    border:1px solid #f79f10 !important;
+} 
 
 /*
  * main-columns
@@ -777,6 +783,9 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected {
     border-bottom-color: #780a13;
     border-top-color: #999;
     color: #222;
+}
+.template-portal #content li.formTab a:target {
+background-color: #780a13 !important;
 }
 /*
  * formPanel styles
@@ -1575,7 +1584,7 @@ div.dhx_cal_navline div.active {
     border-bottom-color: #aaa;
     display: block;
     background: #f9f9f9;
-}
+}284033
 .template-workspace.section-bungeni-workspace li.formTab a.selected {
     background: url(/static/images/w-globalnav-level0-a.png) top left repeat-x;
     border-bottom-color: #6ca6cd;
@@ -1688,6 +1697,15 @@ div.dhx_cal_navline div.active {
 .template-workspace.section-bungeni-workspace table.listing td a:active {
     color:#21a1ba !important;
 } 
+.template-workspace.section-bungeni-workspace #content ul.formTabs li a.selected,
+.template-workspace.section-bungeni-workspace #content ul.formTabs li a:hover,
+.template-workspace.section-bungeni-workspace #content ul.formTabs li a:target {
+    background:#21a1ba !important;
+}
+.template-workspace #content ul.formTabs li a:hover,
+.template-workspace #content ul.formTabs li a:target {
+    background:#780a13 !important;
+}
 /*
  * yui paginator
  */
@@ -1698,4 +1716,34 @@ div.dhx_cal_navline div.active {
 .template-workspace #portal-footer div {
 
     border: 0 none;
+}
+/*Workspace overrides*/
+.template-workspace.section-bungeni-workspace table.listing th,
+.template-workspace.section-bungeni-workspace table.listingdescription th,
+.template-workspace.section-bungeni-workspace .stx table th,
+.template-workspace.section-bungeni-workspace .yui-skin-sam .yui-dt-first th,
+.section-bungeni-workspace tr.yui-dt-first th {
+    background:#aaa !important;
+    text-shadow: 0 0 0  #fff;
+    color: #000 !important;
+}
+.template-workspace.section-bungeni-workspace #display_form_spacer {
+    background:#aaa !important;
+}
+
+/*MailBox*/
+.template-workspace .portlet ul.contentViewsLeftPort li {
+    border:0 none !important;
+}
+.template-workspace .portlet ul.contentViewsLeftPort li a {
+    border:1px solid #888 !important;
+    -moz-border-radius: 3px; 
+    -webkit-border-radius: 3px; 
+    border-radius: 3px;
+    background-color:#f9f9f9 !important;
+}
+.template-workspace .portlet ul.contentViewsLeftPort li.selected,
+.template-workspace .portlet ul.contentViewsLeftPort li a:hover {
+    background-color:#21a1ba !important;
+    color:#fff !important;
 }
