Schema updates for GroupSitting objects. Fix for flat vdex vocabulary factory.
- Adding fields to group sitting schema: activity_type, meeting_type & convocation_type
  - Adding & registering vdex XML vocabularies for these fields in bungeni_custom
  - Updating GroupSitting descriptor. Also updated UI XML.
  - Updating calendar UI form schema interfaces with new fields
- Calendar Update
  - Moving calendar interfaces to own module inside bungeni/ui/calendar
  - Updated tooltips and events XML to include new type fields
- Removing short_name property from GroupSitting domain object

- Correcting term generation from flat VDEX files
  - Term token now picked from vocabulary term identifier not from translation.

NOTE: This update includes a schema change - SQL Below
-----------------------------------------------------------------
ALTER TABLE group_sittings ADD COLUMN activity_type VARCHAR(1024);
ALTER TABLE group_sittings ADD COLUMN meeting_type VARCHAR(1024);
ALTER TABLE group_sittings ADD COLUMN convocation_type VARCHAR(1024);

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -1080,6 +1080,9 @@
     </descriptor>
 
     <descriptor name="Sitting">
+        <field name="short_name" displayable="view edit add listing" localizable="view edit listing">
+            <show modes="view edit listing" />
+        </field>
         <field name="language" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit" />
             <hide modes="listing" />
@@ -1092,6 +1095,15 @@
         </field>
         <field name="venue_id" displayable="view edit add listing" localizable="view edit add listing">
             <show modes="view edit add listing" />
+        </field>
+        <field name="activity_type" displayable="view edit add" localizable="view edit add">
+            <show modes="view edit add" />
+        </field>
+        <field name="meeting_type" displayable="view edit add" localizable="view edit add">
+            <show modes="view edit add" />
+        </field>
+        <field name="convocation_type" displayable="view edit add" localizable="view edit add">
+            <show modes="view edit add" />
         </field>
     </descriptor>
 
