[Schema change] Refactored "committee_type_id" column on committees table from being a fk onto committee_types table to a "group_type" column that takes a direct string key as value; similarly rafactored the "committee_status_type_id" column on committee_types table, from being a fk key onto committee_status_types table, to be a direct string-valued "group_continuity" column on the committees table istelf. Added "committee_type" and "committee_continuity" vocabularies (currently hard-wired in ui.vocabularies), to be used with "group_type" and "group_continuity" columns for the case of teh committee table. Updated domain model and schema for Committee, as well as related CommitteeDescriptor, DC, and Admin UI (note the admin UI for CommitteeStatusTypedetails for not enabled anyway). Updated affected tests. Requires db refresh: ~/fabric/fl db_load_demodata

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -236,7 +236,10 @@
             <show modes="view edit add" />
             <hide modes="listing" />
         </field>
-        <field name="committee_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="group_type" displayable="view edit add listing" localizable="view edit listing">
+            <show modes="view edit listing" />
+        </field>
+        <field name="group_continuity" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="num_members" displayable="view edit add listing" localizable="view edit add listing">
